# Caching_simulator

./: CMakeLists.txt  README.md
data/: sample_input.txt
include/: CacheSimulator.h  HybridCache.h  LFUCache.h  LRUCache.h
src/: CacheSimulator.cpp  main.cpp
